# memory-mcp

./: .gitignore  CLAUDE.md  LICENSE  QUICKSTART.txt  README.md  check-status.sh  model_arch.mmd  pyproject.toml  setup-memory-mcp-service.sh
claude-plugin/: README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: hooks.json
claude-plugin/hooks-handlers/: post_tool_use.py  session_start.py
docs/: SHARED-SERVICE-SETUP.md
memora/: __init__.py  backends.py  image_storage.py  server.py  storage.py
memora/graph/: __init__.py  data.py  issues.py  server.py  templates.py  todos.py
memory_mcp/: __init__.py  backends.py  server.py  storage.py
nvim/: memora.lua  memory-mcp.lua
tests/: __init__.py  test_cloud_backends.py
