[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-mcp"
version = "0.2.3"
description = "MCP-compatible memory server backed by SQLite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
cloud = [
    "boto3>=1.28.0",
    "filelock>=3.12.0",
]
dev = [
    "moto[s3]>=5.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
all = [
    "memory-mcp[cloud,dev]",
]

[project.scripts]
memory-mcp-server = "memory_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["memory_mcp*"]
