[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memora"
version = "0.2.11"
description = "MCP-compatible memory server backed by SQLite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
cloud = [
    "boto3>=1.28.0",
    "filelock>=3.12.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]
dev = [
    "moto[s3]>=5.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
all = [
    "memora[cloud,embeddings,dev]",
]

[project.scripts]
memora-server = "memora.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["memora*"]
